--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,9 @@
-asgiref==3.2.3
-certifi==2019.11.28
-chardet==3.0.4
-defusedxml==0.6.0
-Django==3.0.2
-django-model-utils==4.0.0
-filelock==3.0.12
-idna==2.8
-importlib-metadata==1.4.0
-more-itertools==8.1.0
-oauthlib==3.1.0
-packaging==20.0
-Pillow==7.0.0
-pluggy==0.13.1
-py==1.8.1
-pyparsing==2.4.6
-python3-openid==3.1.0
-pytz==2019.3
-requests==2.22.0
-requests-oauthlib==1.3.0
-six==1.14.0
-sqlparse==0.3.0
-toml==0.10.0
-tox==3.14.3
-urllib3==1.25.8
+asgiref==3.2.10
+Django==3.1.2
+importlib-metadata==2.0.0
+Markdown==3.3.2
+Pillow==8.0.0
+pytz==2020.1
+sqlparse==0.4.1
 virtualenv==16.7.9
-zipp==2.0.1
+zipp==3.3.1
