--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,18 @@
 asgiref==3.2.10
+attrs==20.3.0
 Django==3.1.2
 importlib-metadata==2.0.0
+iniconfig==1.1.1
 Markdown==3.3.2
+packaging==20.7
 Pillow==8.0.0
+pluggy==0.13.1
+py==1.9.0
+pyparsing==2.4.7
+pytest==6.1.2
+pytest-django==4.1.0
 pytz==2020.1
 sqlparse==0.4.1
+toml==0.10.2
 virtualenv==16.7.9
 zipp==3.3.1
