--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ migrations/
 0002_quiz_category_name.py
 0003_grade_question_score_statistics_themescore.py
 0004_auto_20201120_1723.py
+__pycache__/
+.pytest-cache
