--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 asgiref==3.2.10
 attrs==20.3.0
+coverage==5.3
 Django==3.1.2
 importlib-metadata==2.0.0
 iniconfig==1.1.1
@@ -10,9 +11,12 @@ pluggy==0.13.1
 py==1.9.0
 pyparsing==2.4.7
 pytest==6.1.2
+pytest-cov==2.10.1
 pytest-django==4.1.0
 pytz==2020.1
+selenium==3.141.0
 sqlparse==0.4.1
 toml==0.10.2
+urllib3==1.26.2
 virtualenv==16.7.9
 zipp==3.3.1
