--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@
 #*#
 /db.sqlite3
 sqlite.db
-/mysite*
 /plan.txt
-/dist*
 *.egg-info*
 build*
 /.coverage
@@ -18,18 +16,10 @@ build*
 *.egg
 fastandquizy/settings.py
 venv/
-_admin.py
-_forms.py
-_models.py
-_views.py
-_urls.py
-essay/
+node_modules/
 package-lock.json
-node_modules
 migrations/
-0001_initial.py
-0002_quiz_category_name.py
-0003_grade_question_score_statistics_themescore.py
-0004_auto_20201120_1723.py
 __pycache__/
-.pytest-cache/
+.pytest_cache/
+debug.log
+geckodriver.log
